--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="style.css">
-  <title>London Tube Departures</title>
+  <title>London Rura</title>
 </head>
+
 <body>
-  <h1>London Underground Departures</h1>
+  <h1>London Rura</h1>
   <select id="stationSelect">
     <option value="">Select a station</option>
   </select>
@@ -16,4 +18,5 @@
 
   <script src="app.js"></script>
 </body>
+
 </html>
